--- a/index.html
+++ b/index.html
@@ -26,17 +26,30 @@
                 <p id="_leaderboard">Leaderboard</p>
                 <ul id="leaderboard"></ul>
             </div>
+            <div style="position:relative;">
+                <p id="_advancement">Advancements</p>
+                <ul id="advancement-list"></ul>
+            </div>
             <p id="reg">Register</p>
             <p id="log">Log in</p>
             <p id="sign-out" style="display: none;">Sign out</p>
         </div>
     </div>
     <div id="container">
-        <img id="cut" src="cut.png" alt="cut" width="225">
+        <img id="cut" src="img/cut.png" alt="cut" width="225">
     </div>
     <div id="blur">
         <div class="loader"></div>
         <p>Syncing...</p>
+    </div>
+    <div id="advancement">
+        <div>
+            <img src="" alt="">
+        </div>
+        <div>
+            <p style="color: yellow;">Achivement made!</p>
+            <p class="name"></p>
+        </div>
     </div>
 </body>
 <script type="module" src="script.js"></script>
