update some code

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div style="position:relative;">
                 <p id="_advancement">Advancements</p>
-                <ul id="advancement-list"></ul>
+                <div id="advancement-list"></div>
             </div>
             <p id="reg">Register</p>
             <p id="log">Log in</p>
@@ -42,7 +42,7 @@
         <div class="loader"></div>
         <p>Syncing...</p>
     </div>
-    <div id="advancement">
+    <div id="advancement" class="advancement">
         <div>
             <img src="" alt="">
         </div>
