--- a/index.html
+++ b/index.html
@@ -42,15 +42,7 @@
         <div class="loader"></div>
         <p>Syncing...</p>
     </div>
-    <div id="advancement" class="advancement">
-        <div>
-            <img src="" alt="">
-        </div>
-        <div>
-            <p style="color: yellow;">Achivement made!</p>
-            <p class="name"></p>
-        </div>
-    </div>
+    <div id="advancement-container"></div>
 </body>
 <script type="module" src="script.js"></script>
 
