animation disable-able

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             </b>
             <p id="cps">CPS: 0</p>
             <p id="stupid-warning">(Log in to save your progress)</p>
+            <input type="checkbox" id="animation" style="margin-left: 20px;">
+            <label for="animation">Animation</label>
         </div>
         <div>
             <b>
