--- a/index.html
+++ b/index.html
@@ -48,5 +48,5 @@
     <div id="advancement-container"></div>
 </body>
 <script type="module" src="script.js"></script>
-
+<script type="module" src="database.js"></script>
 </html>
