--- a/index.html
+++ b/index.html
@@ -26,12 +26,22 @@
                 <p id="name"></p>
             </b>
             <div style="position:relative;">
+                <p id="_chat">Chat</p>
+                <div class="navbox" id="chat-container">
+                    <ul id="chatbox"></ul>
+                    <form id="chat-form">
+                        <input type="text">
+                        <button type="submit">Send</button>
+                    </form>
+                </div>
+            </div>
+            <div style="position:relative;">
                 <p id="_leaderboard">Leaderboard</p>
-                <ul id="leaderboard"></ul>
+                <ul class="navbox" id="leaderboard"></ul>
             </div>
             <div style="position:relative;">
                 <p id="_advancement">Advancements</p>
-                <div id="advancement-list"></div>
+                <div class="navbox" id="advancement-list"></div>
             </div>
             <p id="reg">Register</p>
             <p id="log">Log in</p>
