--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Click as many cut as you can. How long will it take for you to get infinite cut?">
     <title>Cut clicker</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/cut.png" type="image/x-icon">
