--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html><html lang="en"><head> <meta charset="UTF-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Leaderboard</title> <link rel="stylesheet" href="style.css"> <link rel="shortcut icon" href="../img/cut.png" type="image/x-icon"></head><body> <ul id="leaderboard"></ul></body><script type="module" src="script.js"></script></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Leaderboard</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="../img/cut.png" type="image/x-icon">
+</head>
+
+<body>
+    <ul id="leaderboard"></ul>
+</body>
+<script type="module" src="script.js"></script>
+
+</html>
