add clear save animation

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <div id="achievement-infor" class="achievement"></div>
     <canvas id="falling-animation"></canvas>
     <canvas id="point-add"></canvas>
-    <div id="blur">
+    <div id="blur" class="fullscreen">
         <div class="loader"></div>
         <p>Syncing...</p>
     </div>
+    <div id="flush" class="fullscreen"></div>
     <ul id="achievement-unlock-container"></ul>
     <div id="container">
         <div id="left">
