add flag counter

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <a style="display:none" href="https://info.flagcounter.com/TJsX"><img src="https://s11.flagcounter.com/countxl/TJsX/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_250/viewers_cut+poopers/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter"></a>
     <div id="achievement-infor" class="achievement"></div>
     <canvas id="falling-animation"></canvas>
     <canvas id="point-add"></canvas>
